added documentation and some renamings

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -34,5 +34,5 @@ RUN sudo chmod 777 -R /workspaces/ \
 # config for function
 ENV GRAPHDBHOSTNAME=<COSMOSDBACCOUNT>.gremlin.cosmos.azure.com
 ENV GRAPHDBKEY=<KEY>
-ENV GRAPHDBNAME=<COSMOSDBACCOUNT>
+ENV GRAPHDBNAME=<COSMOSDB>
 ENV GRAPHDBCOLL=<GRAPHCOLLECTION>
